[gd_scene load_steps=17 format=3 uid="uid://dki0fdg1u3bh2"]

[ext_resource type="Texture2D" uid="uid://dtjelww6ihebr" path="res://assets/sprites/intro_1.png" id="1_3kyql"]
[ext_resource type="Script" path="res://ui/main_menu.gd" id="1_30rgi"]
[ext_resource type="Theme" uid="uid://cox50t575oa1d" path="res://ui/MainTheme.theme" id="1_kbjmn"]
[ext_resource type="Texture2D" uid="uid://csuc26dg2pp0v" path="res://assets/sprites/Selection_UI.png" id="3_pw850"]
[ext_resource type="Texture2D" uid="uid://bov0xxphim4iv" path="res://assets/sprites/intro_2.png" id="5_14thb"]
[ext_resource type="Texture2D" uid="uid://by5yix6viksdi" path="res://assets/sprites/intro_3.png" id="6_d4iar"]
[ext_resource type="Texture2D" uid="uid://c8obgy5gqik3e" path="res://assets/sprites/intro_4.png" id="7_5t4l2"]

[sub_resource type="AtlasTexture" id="AtlasTexture_hwyuf"]
atlas = ExtResource("3_pw850")
region = Rect2(12, 6, 48, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_8qv2l"]
atlas = ExtResource("3_pw850")
region = Rect2(113, 6, 48, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_1vj6l"]
atlas = ExtResource("3_pw850")
region = Rect2(62, 6, 48, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_rxx33"]
atlas = ExtResource("3_pw850")
region = Rect2(12, 6, 48, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_ud8yo"]
atlas = ExtResource("3_pw850")
region = Rect2(113, 6, 48, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_qre5a"]
atlas = ExtResource("3_pw850")
region = Rect2(62, 6, 48, 14)

[sub_resource type="Animation" id="Animation_q3ebx"]
resource_name = "Intro_1"
length = 41.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MarginContainer:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MarginContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MarginContainer/VBoxContainer/StartButton:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("MarginContainer/VBoxContainer/ExitButton:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Intro2:self_modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 11.2, 13.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Intro3:self_modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 21.4, 23.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("MarginContainer2/Intro1Text:visible_ratio")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(1.6, 8.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("MarginContainer2/Intro2Text:visible_ratio")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(1.6, 14, 17.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 0.0, 1.0]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("MarginContainer2/Intro3Text:visible_ratio")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(1.6, 25.2, 29),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 0.0, 1.0]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("MarginContainer2/Intro3Text:self_modulate")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(30.4, 31.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("MarginContainer2/Intro1Text:self_modulate")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(9.1, 10.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/11/type = "value"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("MarginContainer2/Intro2Text:self_modulate")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"times": PackedFloat32Array(18.9, 20.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/12/type = "value"
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/path = NodePath("Intro4:self_modulate")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/keys = {
"times": PackedFloat32Array(33, 35),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/13/type = "value"
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/path = NodePath("MarginContainer2/Intro4Text:visible_ratio")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/keys = {
"times": PackedFloat32Array(0, 36.3, 39.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 0.0, 1.0]
}
tracks/14/type = "value"
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/path = NodePath("SkipButton:visible")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/keys = {
"times": PackedFloat32Array(1.5, 1.6),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_rodri"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MarginContainer:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MarginContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MarginContainer/VBoxContainer/StartButton:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("MarginContainer/VBoxContainer/ExitButton:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Intro2:self_modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Intro3:self_modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("MarginContainer2/Intro1Text:visible_ratio")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("MarginContainer2/Intro2Text:visible_ratio")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("MarginContainer2/Intro3Text:visible_ratio")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("MarginContainer2/Intro3Text:self_modulate")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("MarginContainer2/Intro1Text:self_modulate")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/11/type = "value"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("MarginContainer2/Intro2Text:self_modulate")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/12/type = "value"
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/path = NodePath("Intro4:self_modulate")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/13/type = "value"
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/path = NodePath("MarginContainer2/Intro4Text:visible_ratio")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/14/type = "value"
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/path = NodePath("SkipButton:visible")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7ihmc"]
_data = {
"Intro_1": SubResource("Animation_q3ebx"),
"RESET": SubResource("Animation_rodri")
}

[node name="MainMenu" type="TextureRect"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_3kyql")
script = ExtResource("1_30rgi")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 1
theme_override_constants/margin_top = 1
theme_override_constants/margin_right = 1
theme_override_constants/margin_bottom = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 1

[node name="Label" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/default_color = Color(0, 0, 0, 1)
text = "Wizard gets busted for tax evasion"
scroll_active = false

[node name="StartButton" type="TextureButton" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("1_kbjmn")
texture_normal = SubResource("AtlasTexture_hwyuf")
texture_pressed = SubResource("AtlasTexture_8qv2l")
texture_hover = SubResource("AtlasTexture_1vj6l")

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/StartButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -4.5
offset_right = 20.0
offset_bottom = 4.5
grow_horizontal = 2
grow_vertical = 2
text = "Start"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ExitButton" type="TextureButton" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
texture_normal = SubResource("AtlasTexture_rxx33")
texture_pressed = SubResource("AtlasTexture_ud8yo")
texture_hover = SubResource("AtlasTexture_qre5a")

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/ExitButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -4.5
offset_right = 20.0
offset_bottom = 4.5
grow_horizontal = 2
grow_vertical = 2
text = "Exit"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Intro2" type="TextureRect" parent="."]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2
texture = ExtResource("5_14thb")

[node name="Intro3" type="TextureRect" parent="."]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2
texture = ExtResource("6_d4iar")

[node name="Intro4" type="TextureRect" parent="."]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2
texture = ExtResource("7_5t4l2")

[node name="MarginContainer2" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 1
theme_override_constants/margin_top = 1
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 1

[node name="Intro1Text" type="RichTextLabel" parent="MarginContainer2"]
layout_mode = 2
mouse_filter = 2
theme_override_colors/default_color = Color(0.733333, 0, 0, 1)
text = "A wizard lived a happy life far away from society.
But it was not meant to last."
scroll_active = false
visible_characters = 0
visible_characters_behavior = 1
visible_ratio = 0.0

[node name="Intro2Text" type="RichTextLabel" parent="MarginContainer2"]
layout_mode = 2
mouse_filter = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
text = "A letter about unpaid taxes arrived. It was too late "
scroll_active = false
visible_characters = 0
visible_characters_behavior = 1
visible_ratio = 0.0

[node name="Intro3Text" type="RichTextLabel" parent="MarginContainer2"]
layout_mode = 2
mouse_filter = 2
theme_override_colors/default_color = Color(0.733333, 0, 0, 1)
text = "The night is nearing and the lich already sent his minions."
scroll_active = false
visible_characters = 0
visible_characters_behavior = 1
visible_ratio = 0.0

[node name="Intro4Text" type="RichTextLabel" parent="MarginContainer2"]
layout_mode = 2
mouse_filter = 2
theme_override_colors/default_color = Color(0.733333, 0, 0, 1)
text = "You sense a stranger nearby."
scroll_active = false
visible_characters = 0
visible_characters_behavior = 1
visible_ratio = 0.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_7ihmc")
}

[node name="SkipButton" type="Button" parent="."]
visible = false
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -6.0
offset_right = 20.0
grow_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Skip"

[connection signal="button_down" from="MarginContainer/VBoxContainer/StartButton" to="." method="_on_start_button_button_down"]
[connection signal="button_down" from="MarginContainer/VBoxContainer/ExitButton" to="." method="_on_exit_button_button_down"]
[connection signal="button_up" from="SkipButton" to="." method="_on_skip_button_button_up"]
